# DeepAgents-as-a-Service-with-A2A

./: README.md  agent.py  client.py  proxy.py  pyproject.toml  server.py
web/: app.js  index.html  styles.css
